# hydra-confs

./: README.md  configen.yaml  generate_confs.sh  pyproject.toml
hydra_confs/pytorch_lightning/metrics/: regression.py
hydra_confs/sklearn/: preprocessing.py
pl_confs/pytorch_lightning/: callbacks.py
pl_confs/pytorch_lightning/metrics/: classification.py
tests/: test_sklearn.py
